Add Component Add HStack Add Spacer Add Stack Add Text Add VStack Add ZStack Add Size Add JxUIFile Add Test Add Test.jxui