@@ -2,11 +2,12 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '5.0.0'
+    id 'org.frgaal.compiler'
 
     id 'maven-publish'
 }
 
-group 'yxUI'
+group 'de.jxui'
 version 'SNAPSHOT'
 
 ext {
@@ -14,20 +15,49 @@ ext {
     jarName = "${group}-${version}.jar"
     libs = "${buildDir}/libs"
 
-    publication = mayor + "." + minor + "." + patch
+    groupName = "${group}"
+
+    publication = major + "." + minor + "." + patch
 }
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-mainClassName = ''
 
 repositories {
     mavenCentral()
 }
 
+targetCompatibility = '1.8'
+sourceCompatibility = '15'
+
+compileJava.options.encoding = 'UTF-8'
+compileJava {
+    options.compilerArgs << '-Xlint:deprecation' << '--enable-preview'
+}
+
+compileTestJava.options.encoding = 'UTF-8'
+compileTestJava {
+    options.compilerArgs << '-Xlint:deprecation' << '--enable-preview'
+}
+
+mainClassName = ''
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    compileOnly 'org.atteo.classindex:classindex:3.4'
+    testCompileOnly 'org.atteo.classindex:classindex:3.4'
+    annotationProcessor 'org.atteo.classindex:classindex:3.4'
+    testAnnotationProcessor 'org.atteo.classindex:classindex:3.4'
+
+    implementation 'org.objenesis:objenesis:3.1'
+    implementation 'eu.infomas:annotation-detector:3.0.5'
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+
+    testImplementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 }
 
 // Building
@@ -36,31 +66,6 @@ shadowJar {
         attributes(
                 'Main-Class': mainClassName
         )
-    }
-
-    from(rootDir) {
-        include 'LICENSE'
-    }
-    from(rootDir) {
-        include '**/README.md'
-    }
-}
-
-// Publishing
-publishing {
-    repositories {
-        maven {
-            url = "${rootDir}/releases"
-        }
-    }
-    publications {
-        maven(MavenPublication) {
-            groupId = 'yoyosource'
-            artifactId = group
-            version = publication
-
-            from components.java
-        }
     }
 }
 
